# MemoBase

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html
architecture/: index.html
cli_usage/: index.html
contributing/: index.html
data_models/: index.html
docs/: architecture.md  cli_usage.md  contributing.md  data_models.md  index.md  interfaces.md  performance.md  testing.md  tui_usage.md
interfaces/: index.html
memobase/: __init__.py
memobase/analysis/: __init__.py  code_analyzer.py  metrics.py  pattern_detector.py
memobase/cli/: __init__.py  commands.py  config.py  main.py
memobase/core/: __init__.py  exceptions.py  interfaces.py  models.py
memobase/graph/: __init__.py  analyzer.py  builder.py  traversal.py
memobase/incremental/: __init__.py  change_detector.py  updater.py
memobase/index/: __init__.py  builder.py  ranker.py  searcher.py
memobase/infrastructure/: __init__.py  builder.py  code_analyzer.py  doctor.py  graph_analyzer.py  query_engine.py  setup.py  updater.py
memobase/infrastructure/concurrency/: executor.py
memobase/infrastructure/config/: loader.py  schema.py
memobase/infrastructure/filesystem/: ignore.py  scanner.py
memobase/infrastructure/hashing/: hasher.py
memobase/infrastructure/logging/: logger.py
memobase/infrastructure/utils/: paths.py  timers.py
memobase/memory/: __init__.py  builder.py  embedder.py  extractor.py
memobase/parser/: __init__.py  base.py  build_languages.py  factory.py  javascript.py  languages.py  python.py
memobase/query/: __init__.py  classifier.py  formatter.py  processor.py
memobase/storage/: __init__.py  cache.py  file_storage.py  sqlite_storage.py
memobase/tui/: __init__.py  actions.py  app.py  controller.py  event_bus.py  state.py
memobase/tui/layouts/: main_layout.py
memobase/tui/views/: analysis_view.py  graph_view.py  memory_view.py  query_view.py
memobase/tui/widgets/: command_bar.py  file_tree.py  header.py  main_panel.py  status_bar.py
performance/: index.html
search/: search_index.json
stylesheets/: extra.css
test_repo/: .gitignore  test.py  test_file.py
testing/: index.html
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/performance/: test_performance.py
tests/unit/: test_core_models.py  test_graph.py  test_index.py  test_memory.py  test_parser.py  test_storage.py
tui_usage/: index.html
